Table games {
  id int [pk, increment]
  title varchar [not null, unique]
  description text
  designer varchar
  year_released int
  num_players varchar
  est_playtime varchar
  age_recommendation varchar
  creator_id int [not null, ref: > auth_user.id]
}

Table categories {
  id int [pk, increment]
  label varchar [not null, unique]
}

Table games_categories {
  id int [pk, increment]
  game_id int [not null, ref: > games.id]
  category_id int [not null, ref: > categories.id]

  Indexes {
    (game_id, category_id) [unique]
  }
}

Table reviews {
  id int [pk, increment]
  game_id int [not null, ref: > games.id]
  user_id int [not null, ref: > auth_user.id]
  content text
  date_posted datetime [default: `now()`]
}

Table ratings {
  id int [pk, increment]
  game_id int [not null, ref: > games.id]
  user_id int [not null, ref: > auth_user.id]
  value int [not null]

  Indexes {
    (game_id, user_id) [unique]
  }
}

Table game_images {
  id int [pk, increment]
  game_id int [not null, ref: > games.id]
  uploaded_by int [not null, ref: > auth_user.id]
  image_url varchar [not null]
  uploaded_at datetime [default: `now()`]
}